:art: 쿠폰컨트롤러 리스트 적용